Removing suggested issues.

--- a/item/templates/items.html
+++ b/item/templates/items.html
@@ -46,9 +46,11 @@
                                 {% csrf_token %}
 
                                 <label for="sel1">Select Client:</label>
-                                <select class="form-control" id="org">
+                                <select class="form-control" id="org" name="org">
+                                <option value="-1">-------</option>
                                     {% for client in clients %}
-                                        <option>{{ client.org_id }}</option>
+                                        <option value="{{ client.id }}"
+                                                {% if selected_org and selected_org.id == client.id %}selected{% endif %}>{{ client.org_id }}</option>
                                     {% endfor %}
 
                                 </select>
@@ -67,8 +69,8 @@
 
 
                 <div class="col-lg-12">
-                    <a href="{% url 'add_item' %}" class="btn btn-default"> <i
-                            class="fa fa-user-plus" style="font-size: x-large;color: black;"></i></a>
+                    <a href="{% url 'add_item' %}{% if selected_org %}?org_id={{ selected_org.id }}{% endif %}" class="btn btn-default"> <i
+                            class="fa fa-plus" style="font-size: x-large;color: black;"></i></a>
                 </div>
 
 
@@ -94,7 +96,8 @@
                                 <td>{{ item.description }}</td>
                                 <td> {% if item.active %}  <i class="fa fa-check" style="color: green"></i>
                                 {% else %} <i class="fa fa-times" style="color: red"></i>{% endif %}</td>
-                                <td><a href="{% url 'item_details' item.id %}"> <i class="fa fa-check" style="color: green"></i></a></td>
+                                <td><a href="{% url 'item_details' item.id %}"> <i class="fa fa-check"
+                                                                                   style="color: green"></i></a></td>
                             </tr>
 
                         {% endfor %}
