--- a/item/templates/item_details.html
+++ b/item/templates/item_details.html
@@ -52,8 +52,8 @@
 
             <div class="row">
                 <div class="col-lg-12">
-                    <a href="{% url 'add_uom_item' %}" class="btn btn-default"> <i
-                            class="fa fa-user-plus" style="font-size: x-large;color: black;"></i></a>
+                    <a href="{% url 'add_uom_item' %}?item_id={{ item.id }}" class="btn btn-default"> <i
+                            class="fa fa-plus" style="font-size: x-large;color: black;"></i></a>
                 </div>
                 <div class="col-lg-12">
                     <table class="table">
