--- a/item/templates/item_uom_add_edit.html
+++ b/item/templates/item_uom_add_edit.html
@@ -17,6 +17,22 @@
     <div class="row">
 
         <div class="col-lg-12">
+
+            {% if form.errors %}
+                {% for field in form %}
+                    {% for error in field.errors %}
+                        <div class="alert alert-danger">
+                            <strong>{{ error|escape }}</strong>
+                        </div>
+                    {% endfor %}
+                {% endfor %}
+                {% for error in form.non_field_errors %}
+                    <div class="alert alert-danger">
+                        <strong>{{ error|escape }}</strong>
+                    </div>
+                {% endfor %}
+            {% endif %}
+
             <form role="form" method="post">
                 {% csrf_token %}
                 <div class="login-form">
