Restrict To 1 in case of EACH selection.

--- a/item/templates/item_uom_add_edit.html
+++ b/item/templates/item_uom_add_edit.html
@@ -164,6 +164,19 @@
             }
         });
 
+        $('#id_pack').focusout(function () {
+            if ($("#id_pack_type option:selected").text() == 'EACH') {
+                $('#id_pack').val('1');
+            }
+        });
+
+
+        $('#id_pack_type').focusout(function () {
+            if ($("#id_pack_type option:selected").text() == 'EACH') {
+                $('#id_pack').val('1');
+            }
+        });
+
     </script>
 
 {% endblock content %}
