Fixing auto calculation

--- a/item/templates/item_uom_add_edit.html
+++ b/item/templates/item_uom_add_edit.html
@@ -75,10 +75,10 @@
                     <div class="row">
                         <div class="col-md-4"></div>
                         <div class="col-md-4 center">
-                            <input type="checkbox" id="english"/>&nbsp;<label>English</label>
+                            <input type="checkbox" name="english" id="english"/>&nbsp;<label>English</label>
                         </div>
                         <div class="col-md-4 center">
-                            <input type="checkbox" id="metric"/>&nbsp;<label>Metric</label>
+                            <input type="checkbox" name="metric" id="metric"/>&nbsp;<label>Metric</label>
 
                         </div>
 
