Update items and item details.

--- a/item/templates/item_uom_add_edit.html
+++ b/item/templates/item_uom_add_edit.html
@@ -15,7 +15,7 @@
 
     </style>
 
-    <h2 class="heading">Item UOM</h2>
+    <h2 class="heading">Item Details</h2>
     <div class="row">
         <div class="col-lg-2">
             <label><b>Client</b></label></div>
