--- a/item/templates/item_details.html
+++ b/item/templates/item_details.html
@@ -70,7 +70,7 @@
                             <th>HT</th>
 
                             <th>WT(KG)</th>
-                            <th>LEM(CM)</th>
+                            <th>LEN(CM)</th>
                             <th>WID</th>
                             <th>HT</th>
                             <th>Edit</th>
