--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -72,7 +72,7 @@
                             class="fa fa-film"></i> <span class="d-none d-md-inline">Home</span></a>
 
 
-                    <a href="{% url 'receiving' %}"  {% if tab == 'receiving' %}
+                    <a href="{% url 'orders' %}"  {% if tab == 'receiving' %}
                        style="background-color: darkgray; color: black;"{% endif %}
                        class="list-group-item d-inline-block collapsed active-link" data-parent="#sidebar"><i
                             class="fa fa-film"></i> <span class="d-none d-md-inline">Receiving</span></a>
