--- a/receive/templates/order_add_edit.html
+++ b/receive/templates/order_add_edit.html
@@ -1,10 +1,24 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% load static %}
+{% block content %}
+    {% load bootstrap3 %}
+    <div class="row">
+        <div class="col-lg-12">
+            <form role="form" method="post">
+                {% csrf_token %}
+                <div class="login-form">
+                    <h3 class="heading">Add Order </h3>
+                    <br>
+                    <br>
+                    {% bootstrap_form form %}
+                    {% buttons %}
+                        <button type="submit" class="btn btn-success">Submit <span
+                                class="glyphicon glyphicon-log-in"></span></button>
+                    {% endbuttons %}
+                </div>
+            </form>
+        </div>
 
-</body>
-</html>
+    </div>
+
+{% endblock content %}
