--- a/receive/templates/orders.html
+++ b/receive/templates/orders.html
@@ -18,10 +18,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link inner_item" href="#item" role="tab" data-toggle="tab">Item<span class="sr-only">(current)</span></a>
+                    <a class="nav-link inner_order" href="#order" role="tab" data-toggle="tab">Orders<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link inner_details" href="#" role="tab">Item Details</a>
+                    <a class="nav-link inner_details" href="#" role="tab">Order Details</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link inner_charges" href="#charges" role="tab" data-toggle="tab">Charges</a>
@@ -31,7 +31,7 @@
     </nav>
 
     <div class="tab-content">
-        <div role="tabpanel" class="tab-pane fade in active" id="item">
+        <div role="tabpanel" class="tab-pane fade in active" id="order">
             <div class="row">
 
                 <div class='container'>
@@ -68,11 +68,11 @@
                 </div>
 
 
-{#                <div class="col-lg-12">#}
-{#                    <a href="{% url 'add_item' %}{% if selected_org %}?org_id={{ selected_org.id }}{% endif %}"#}
-{#                       class="btn btn-default"> <i#}
-{#                            class="fa fa-plus" style="font-size: x-large;color: black;"></i></a>#}
-{#                </div>#}
+                <div class="col-lg-12">
+                    <a href="{% url 'add_order' %}{% if selected_org %}?org_id={{ selected_org.id }}{% endif %}"
+                       class="btn btn-default"> <i
+                            class="fa fa-plus" style="font-size: x-large;color: black;"></i></a>
+                </div>
 
 
                 <div class="col-lg-12">
@@ -134,8 +134,8 @@
 
     <script>
         $(document).ready(function () {
-            if ('{{ new_tab }}' == 'item') {
-                $('.inner_item').click();
+            if ('{{ new_tab }}' == 'orders') {
+                $('.inner_order').click();
             }
             else if ('{{ new_tab }}' == 'item_details') {
                 $('.inner_details').click();
